--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "homepage": "https://github.com/strattyx/express-weekday-extension#readme",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+     "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "moment-timezone": "^0.5.27"
   }
 }
